// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconDrive /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M96 37h70.7l68.1 115h-70.7L96 37z"
      fill="#ffd04b"
    />
     
    <path
      d="M64.7 220h134.6l36-60H99.9l-35.2 60z"
      fill="#4688f4"
    />
     
    <path
      d="M20.7 156.6l35.9 58.9L124 101.1 89 42.2 20.7 156.6z"
      fill="#1fa463"
    />
  </svg>
</div>
`;

exports[`<IconDrive /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconDrive /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M96 37h70.7l68.1 115h-70.7L96 37z"
      fill="#ffd04b"
    />
     
    <path
      d="M64.7 220h134.6l36-60H99.9l-35.2 60z"
      fill="#4688f4"
    />
     
    <path
      d="M20.7 156.6l35.9 58.9L124 101.1 89 42.2 20.7 156.6z"
      fill="#1fa463"
    />
  </svg>
</div>
`;

exports[`<IconDrive /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconDrive /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M96 37h70.7l68.1 115h-70.7L96 37z"
      fill="#ffd04b"
    />
     
    <path
      d="M64.7 220h134.6l36-60H99.9l-35.2 60z"
      fill="#4688f4"
    />
     
    <path
      d="M20.7 156.6l35.9 58.9L124 101.1 89 42.2 20.7 156.6z"
      fill="#1fa463"
    />
  </svg>
</div>
`;

exports[`<IconDrive /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconDrive /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M96 37h70.7l68.1 115h-70.7L96 37z"
      fill="#ffd04b"
    />
     
    <path
      d="M64.7 220h134.6l36-60H99.9l-35.2 60z"
      fill="#4688f4"
    />
     
    <path
      d="M20.7 156.6l35.9 58.9L124 101.1 89 42.2 20.7 156.6z"
      fill="#1fa463"
    />
  </svg>
</div>
`;

exports[`<IconDrive /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconDrive /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M96 37h70.7l68.1 115h-70.7L96 37z"
      fill="#ffd04b"
    />
     
    <path
      d="M64.7 220h134.6l36-60H99.9l-35.2 60z"
      fill="#4688f4"
    />
     
    <path
      d="M20.7 156.6l35.9 58.9L124 101.1 89 42.2 20.7 156.6z"
      fill="#1fa463"
    />
  </svg>
</div>
`;

exports[`<IconDrive /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconDrive /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M96 37h70.7l68.1 115h-70.7L96 37z"
      fill="#ffd04b"
    />
     
    <path
      d="M64.7 220h134.6l36-60H99.9l-35.2 60z"
      fill="#4688f4"
    />
     
    <path
      d="M20.7 156.6l35.9 58.9L124 101.1 89 42.2 20.7 156.6z"
      fill="#1fa463"
    />
  </svg>
</div>
`;

exports[`<IconDrive /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconDrive /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M96 37h70.7l68.1 115h-70.7L96 37z"
      fill="#ffd04b"
    />
     
    <path
      d="M64.7 220h134.6l36-60H99.9l-35.2 60z"
      fill="#4688f4"
    />
     
    <path
      d="M20.7 156.6l35.9 58.9L124 101.1 89 42.2 20.7 156.6z"
      fill="#1fa463"
    />
  </svg>
</div>
`;

exports[`<IconDrive /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconDrive /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M96 37h70.7l68.1 115h-70.7L96 37z"
      fill="#ffd04b"
    />
     
    <path
      d="M64.7 220h134.6l36-60H99.9l-35.2 60z"
      fill="#4688f4"
    />
     
    <path
      d="M20.7 156.6l35.9 58.9L124 101.1 89 42.2 20.7 156.6z"
      fill="#1fa463"
    />
  </svg>
</div>
`;

exports[`<IconDrive /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconDrive /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M96 37h70.7l68.1 115h-70.7L96 37z"
      fill="#ffd04b"
    />
     
    <path
      d="M64.7 220h134.6l36-60H99.9l-35.2 60z"
      fill="#4688f4"
    />
     
    <path
      d="M20.7 156.6l35.9 58.9L124 101.1 89 42.2 20.7 156.6z"
      fill="#1fa463"
    />
  </svg>
</div>
`;

exports[`<IconDrive /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconDrive /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M96 37h70.7l68.1 115h-70.7L96 37z"
      fill="#ffd04b"
    />
     
    <path
      d="M64.7 220h134.6l36-60H99.9l-35.2 60z"
      fill="#4688f4"
    />
     
    <path
      d="M20.7 156.6l35.9 58.9L124 101.1 89 42.2 20.7 156.6z"
      fill="#1fa463"
    />
  </svg>
</div>
`;

exports[`<IconDrive /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconDrive /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M96 37h70.7l68.1 115h-70.7L96 37z"
      fill="#ffd04b"
    />
     
    <path
      d="M64.7 220h134.6l36-60H99.9l-35.2 60z"
      fill="#4688f4"
    />
     
    <path
      d="M20.7 156.6l35.9 58.9L124 101.1 89 42.2 20.7 156.6z"
      fill="#1fa463"
    />
  </svg>
</div>
`;

exports[`<IconDrive /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconDrive /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M96 37h70.7l68.1 115h-70.7L96 37z"
      fill="#ffd04b"
    />
     
    <path
      d="M64.7 220h134.6l36-60H99.9l-35.2 60z"
      fill="#4688f4"
    />
     
    <path
      d="M20.7 156.6l35.9 58.9L124 101.1 89 42.2 20.7 156.6z"
      fill="#1fa463"
    />
  </svg>
</div>
`;

exports[`<IconDrive /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
